@@ -39,6 +39,10 @@ which is generated by a wxTextCtrl control.}
 which is generated by a wxTextCtrl control. Note that you must use
 wxTE\_PROCESS\_ENTER flag when creating the control if you want it to generate
 such events.}
+\twocolitem{{\bf EVT\_TEXT\_MAXLEN(id, func)}}{Process a wxEVT\_COMMAND\_TEXT\_MAXLEN command,
+which is generated by a wxTextCtrl control when the user tries to enter more
+characters into it than the limit previosuly set with 
+\helpref{SetMaxLength}{wxtextctrlsetmaxlength}.}
 \twocolitem{{\bf EVT\_MENU(id, func)}}{Process a wxEVT\_COMMAND\_MENU\_SELECTED command,
 which is generated by a menu item.}
 \twocolitem{{\bf EVT\_MENU\_RANGE(id1, id2, func)}}{Process a wxEVT\_COMMAND\_MENU\_RANGE command,
